<resources>

    <string name="app_name">Proyecto Alimentar</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCoGFOscoG_40AR5LIYhoCJxMCsYYh7R40</string>

    <string name="facebook_app_id">863927230374800</string>
    <string name="fb_login_protocol_scheme">fb863927230374800</string>

    <!-- Navigation drawer -->
    <string name="map">Mapa</string>
    <string name="donations">Donaciones</string>
    <string name="terms_and_conditions">Términos y condiciones</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="name">Nombre</string>
    <string name="address">Dirección</string>

    <!--Errors-->
    <string name="connection_error">Problema de conexión</string>


    <!-- Info window -->
    <string name="see_details">Detalle</string>

    <!-- Food Location Detail -->
    <string name="see_directions">Como llegar</string>
    <string name="description">Descripción</string>

    <string name="givers">Donantes</string>
    <string name="recipients">Comedores</string>
    <string name="find_donation">Buscar donación</string>
    <string name="select_fridge">Seleccionar destino</string>
    <string name="search">Buscar</string>

    <string name="facebook_error">Error al iniciar sesión con Facebook</string>
    <string name="signout_error">Error al cerrar sesión</string>

    <string name="deactivate_error">Error al cancelar una donación</string>
    <string name="cancel">Cancelar</string>
    <string name="destination">Destino:</string>
    <string name="hint_destination">Elija un comedor</string>
    <string name="confirm_donation_time">60 min</string>
    <string name="confirm_donation_explanation">Tenes 60 minutos para pasar a buscar la donación</string>
    <string name="confirm_donation_cancel">Cancelar</string>
    <string name="confirm_donation_accept">aceptar</string>
    <string name="accept_terms_and_conditions">Acepto los <u>Términos y condiciones</u></string>
    <string name="facebook_login">Iniciar sesión con Facebook</string>

    <!--Fridge selector-->
    <string name="selector_title">Seleccione un comedor</string>

    <!--Notification-->
    <string name="notification_donation_nearby">Donación cercana</string>
    <string name="qualification_request">Califique al donador</string>


    <!--Qualification View-->
    <string name="qualify_question">¿Como calificas al donante %1$s?</string>
    <string name="qualify_error">Hubo un error al calificar al voluntario</string>


    <string name="permission_rationale">Se necesita la locación para mostrar donaciones cercanas</string>
    <string name="ok">ok</string>


</resources>
