<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <LinearLayout
        android:padding="@dimen/description_padding"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:background="@drawable/img_drawer_cover">

        <com.facebook.drawee.view.SimpleDraweeView

            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/profile_image"
            fresco:placeholderImageScaleType="centerCrop"
            fresco:roundAsCircle="true"
            fresco:placeholderImage="@drawable/ic_profile_placeholder"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_padding"
                android:text="@string/name"
                android:textColor="@color/colorAccent"
                />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/nav_item_map"
        style="@style/NavDrawerElement">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dontation_directions"
            android:layout_marginRight="@dimen/description_padding"/>
        <TextView
            style="@style/NavItem"
            android:text="@string/map"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_item_donations"
        style="@style/NavDrawerElement">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_drawer_dontations"
            android:layout_marginRight="@dimen/description_padding"/>
        <TextView
            style="@style/NavItem"
            android:text="@string/donations"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_item_terms"
        style="@style/NavDrawerElement">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_drawer_terms_conditions"
            android:layout_marginRight="@dimen/description_padding"/>
        <TextView
            style="@style/NavItem"
            android:text="@string/terms_and_conditions"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_out"
        style="@style/NavDrawerElement">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_drawer_logout"
            android:layout_marginRight="@dimen/description_padding"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/NavItem"
            android:text="@string/sign_out"
            />
    </LinearLayout>



</LinearLayout>